[project]
name = "cyberscan-worker"
version = "0.1.0"
description = "Cyberscan Celery workers"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4",
  "redis>=5.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "boto3>=1.35",
  "sslyze>=6.0",
  "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
